--- a/src/app/profile/Employee/employee-profile/employee-profile.component.html
+++ b/src/app/profile/Employee/employee-profile/employee-profile.component.html
@@ -87,13 +87,18 @@
 
              
                 </div> -->
+                
                 <div class="row ">
                     <main role="main" class="container">
                         <div class="d-flex align-items-center p-3 my-3 text-white-50 rounded box-shadow" id="part0">
                           <img [src]="ProfileImage" width="150" height="150">
-
+                         
                           <div class="lh-100">
-                            <h5 class="mb-0 text-white lh-100">{{result.empName}}</h5>
+                            <h5 class="mb-0 text-white lh-100">{{result.empName}} </h5>
+                            <h5 class="mb-0 text-white lh-100"> <small (click)=updateprofile(result.empId) id="update" style="position:absolute; right:15%"> update
+                               <br><small (click)=changepassword(result.empEmail)> change Password</small></small> 
+                          </h5>
+                          <!-- <p (click)=changepassword(result.empEmail)> change Password</p>  -->
                             <small>{{result.empPosition}}</small>
                             <table class="cntent">
                                 <tr>
