--- a/src/app/profile/Department/department-create/department-create.component.html
+++ b/src/app/profile/Department/department-create/department-create.component.html
@@ -15,16 +15,18 @@
             <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
             <!-- Sign up Form -->
             <form [formGroup]="departmentForm" autocomplete="off" novalidate (ngSubmit)="createdepartment(departmentForm.value)">
-                <div class="form-group">
+                <div class="form-group col-md-12">
                     <label for="email" class="sr-only">DepartmentId</label>
-                    <input class="form-control" formControlName="departmentId" id="departmentId" placeholder="Department Id">
+                    <input class="form-control" formControlName="departmentId" id="departmentId" required>
+                   <label > Department Id</label>
                     <em *ngIf="validateControl('departmentId') && hasError('departmentId', 'required')">*Department Id is required!</em>
                     <em *ngIf="validateControl('departmentId') && hasError('departmentId', 'email')">*This not a valid email!</em>
             
                 </div>
-                <div class="form-group">
+                <div class="form-group col-md-12">
                     <label for="key" class="sr-only">Password</label>
-                    <input type="text" formControlName="departmentName" id="departmentName" class="form-control" placeholder="Department Name">
+                    <input type="text" formControlName="departmentName" id="departmentName" class="form-control" required>
+                    <label > Department Name</label>
                     <em *ngIf="validateControl('departmentName') && hasError('departmentName', 'required')">*Department name is required</em>
                     <em *ngIf="validateControl('departmentName') && hasError('departmentName', 'maxlength')">*Maximum allowed length is 100 characters.</em>
                   
