--- a/src/app/profile/Project/project-create/project-create.component.html
+++ b/src/app/profile/Project/project-create/project-create.component.html
@@ -14,23 +14,29 @@
             <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
             <!-- Sign up Form -->
             <form [formGroup]="projectForm" autocomplete="off" novalidate (ngSubmit)="createrole(projectForm.value)">
-                <div class="form-group">
-                    <label for="email" class="sr-only">DepartmentId</label>
-                    <input class="form-control" formControlName="projectId" id="projectId" placeholder="Project Id">
+                <div class="form-group col-md-12">
+                   
+                    <!-- <input class="form-control" formControlName="projectId" id="projectId" placeholder="Project Id"> -->
+                    <input formControlName="projectId" required >
+                    <label> project Id</label>
                     <em *ngIf="validateControl('projectId') && hasError('projectId', 'required')">*Project Id is required!</em>
                     <em *ngIf="validateControl('projectId') && hasError('projectId', 'email')">*This not a valid email!</em>
             
                 </div>
-                <div class="form-group">
-                    <label for="key" class="sr-only">Name</label>
-                    <input type="text" formControlName="projectName" id="projectName" class="form-control" placeholder="Project Name">
+                <div class="form-group col-md-12">
+                    
+                    <!-- <input type="text" formControlName="projectName" id="projectName" class="form-control" placeholder="Project Name"> -->
+                    <input formControlName="projectName" required >
+                    <label> Project Name</label>
                     <em *ngIf="validateControl('projectName') && hasError('projectName', 'required')">*Project name is required</em>
                     <em *ngIf="validateControl('projectName') && hasError('projectName', 'maxlength')">*Maximum allowed length is 100 characters.</em>
                   
                 </div>
-                <div class="form-group">
-                    <label for="key" class="sr-only">Dis</label>
-                    <input type="text" formControlName="projectDescription" id="projectDescription" class="form-control" placeholder="Project Description">
+                <div class="form-group col-md-12">
+                    
+                    <!-- <input type="text" formControlName="projectDescription" id="projectDescription" class="form-control" placeholder="Project Description"> -->
+                    <input formControlName="projectDescription" required >
+                    <label> Project Description</label>
                     <em *ngIf="validateControl('projectDescription') && hasError('projectDescription', 'required')">*Project details is required</em>
                     <em *ngIf="validateControl('projectDescription') && hasError('projectDescription', 'maxlength')">*Maximum allowed length is 100 characters.</em>
                   
