--- a/src/app/profile/signup-employee/signup-employee.component.html
+++ b/src/app/profile/signup-employee/signup-employee.component.html
@@ -55,7 +55,7 @@
               <div class="form-row">
                       <div class="form-group col-md-6">
                           <!-- <input  placeholder="Password" class="form-control" type="password" formControlName="password" id="password"> -->
-                          <input formControlName="password" required >
+                          <input type="password" formControlName="password" required >
                           <label >Enter Password </label>
                           <em *ngIf="validateControl('password') && hasError('password', 'required')">*Password is required</em>
                           <em *ngIf="validateControl('password') && hasError('password', 'maxlength')">*Maximum allowed length is 6 characters.</em>
@@ -64,7 +64,7 @@
                       </div>
                       <div class="form-group col-md-6">
                               <!-- <input  placeholder="Re Again Password" class="form-control" formControlName="confirmpassword" type="password" id="confirmpassword"> -->
-                              <input formControlName="confirmpassword" required >
+                              <input type="password" formControlName="confirmpassword" required >
                               <label >Re Enter Password </label>
                               <em *ngIf="validateControl('confirmpassword') && hasError('confirmpassword', 'required')">*Password is required</em>
                               <em *ngIf="((ownerForm.errors?.ismatch) )">*confirm password is not match</em> 
