--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,23 @@ body { margin: 0; font-family: 'Roboto', sans-serif; }
 #zoom1:hover{
   transform: scale(1.02);
 }
+#btn{
+  background-color: rgb(176, 14, 35);
+  padding-left: 50px;
+  padding-right: 50px;
+  color: white;
+  transition: 0.4s all ease-in-out;
+  
 
+} 
+#btn:hover{
+background-color: rgb(141, 13, 30);
+  padding-left: 55px;
+  padding-right: 55px;
+  color: rgb(228, 227, 227);
+  -webkit-box-shadow: 0 10px 30px 0 rgba(63,63,63, 0.4);
+  box-shadow: 0 10px 30px 0 rgba(63, 63, 63, 0.4);
+}
 
 #zoom2{
   transition: 0.5s all ease-in-out;
