december to january 2019

--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -5,7 +5,7 @@
   <div *ngFor="let e of event">
     <div class="col-3">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="..." alt="Card image cap">
+        <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBK3FmyjIENz16NWEl1iJcIWj8I5n8hs-rl5JPixzw-XppNfKx" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">{{e.eventName}}</h5>
           <a class="btn btn-primary" [class.click]="(ClickId==e.id)" (click)=moredetail(e.id)>moredetail</a>
