add event and select attribute feature created

--- a/src/app/events/CricketMatch/details-form/details-form.component.html
+++ b/src/app/events/CricketMatch/details-form/details-form.component.html
@@ -29,7 +29,7 @@
             </div>
      
             <div class="form-group row">
-                <label for="inputWinner" class="col-3 col-form-label" >Wenner Team :</label>
+                <label for="inputWinner" class="col-3 col-form-label" >Winner Team :</label>
                 <div class="col-9">
                     <input formControlName="addwinner" class="form-control" type="text" placeholder="Winner" id="inputWinner" >
                     <em *ngIf="validateControl('addwinner') && hasError('addwinner', 'required')">*Wenner is required</em>
