--- a/src/app/events/add-event-type/add-event-type.component.html
+++ b/src/app/events/add-event-type/add-event-type.component.html
@@ -14,22 +14,16 @@
             <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
             <!-- Event Type Form -->
             <form [formGroup]="EventType" autocomplete="off" novalidate (ngSubmit)="createrole(EventType.value)">
+                
                 <div class="form-group">
-                    <label for="email" class="sr-only">DepartmentId</label>
-                    <input class="form-control" formControlName="EventTypeId" id="EventTypeId" placeholder="Event Type Id">
-                    <em *ngIf="validateControl('EventTypeId') && hasError('EventTypeId', 'required')">*Event Type Id is required!</em>
-                    <em *ngIf="validateControl('EventTypeId') && hasError('EventTypeId', 'email')">*This not a valid email!</em>
-            
-                </div>
-                <div class="form-group">
-                    <label for="key" class="sr-only">Name</label>
+                    <label for="key" class="sr-only">Event type</label>
                     <input type="text" formControlName="EventTypeName" id="EventTypeName" class="form-control" placeholder="Event Type Name">
                     <em *ngIf="validateControl('EventTypeName') && hasError('EventTypeName', 'required')">*Event Type name is required</em>
                     <em *ngIf="validateControl('EventTypeName') && hasError('EventTypeName', 'maxlength')">*Maximum allowed length is 100 characters.</em>
                   
                 </div>
                 <div class="form-group">
-                    <label for="key" class="sr-only">Dis</label>
+                    <label for="key" class="sr-only">Description of event type</label>
                     <input type="text" formControlName="EventTypeDescription" id="EventTypeDescription" class="form-control" placeholder="Event Type Description">
                     <em *ngIf="validateControl('EventTypeDescription') && hasError('EventTypeDescription', 'required')">*Event Type details is required</em>
                     <em *ngIf="validateControl('EventTypeDescription') && hasError('EventTypeDescription', 'maxlength')">*Maximum allowed length is 100 characters.</em>
@@ -55,6 +49,9 @@
     
   
         </div>
+    
+    
+    
     
     
     
